--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,6 +1,17 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+/* hide-scrollbar.css */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
