add global loader

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -11,6 +11,12 @@
   scrollbar-width: none; /* Firefox */
 }
 
+#nprogress .bar {
+  background: red !important; 
+  height: 3px;
+}
+
+
 
 @custom-variant dark (&:is(.dark *));
 
